Fix code search preview overflowing on mobile (#2031)

--- a/css/golfer/code-search.css
+++ b/css/golfer/code-search.css
@@ -28,6 +28,11 @@
         padding: 1rem;
     }
 
+    span {
+        overflow-x: auto;
+        overflow-y: hidden;
+    }
+
     code {
         white-space: pre;
         background-color: var(--light-grey);
